# Filecryption

./: .cirun.yml  .gitignore  .runschedule  CRYPTOGRAPHIC_ANALYSIS.md  Cargo.toml  README.md  SECURITY_CHECKLIST.md  TECHNICAL_VULNERABILITY_ANALYSIS.md  build-failures.txt
.github/: dependabot.yml
.github/workflows/: CD.yml  aireview.yml  auto-fix.yml  automerge.yml  build.yml  cargo-bump.yml  cargobump2.yml  cc.yml  ci.yml  clippy-fmt.yml  clippy-rs.yml  codacy.yml  debricked.yml  deps-update.yml  devskim.yml  edition-compat-fixes.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-review.yml  gemini-triage.yml  golangci.yml  kani.yml  opencode.yml  osv-scanner.yml  renovate.yml  rust-clippy.yml  rust-toolchain-update.yml  rust.yml  rustlatest.yml  rustversion.yml  test.yml  updatecheck.yml
src/: main.rs  main_test.rs
tests/: main_test.rs
