[package]
name = "filecryption"
version = "0.9.32"
edition = "2024"
rust-version = "1.93.0"
description = "High-security file encryption using Argon2id and XChaCha20-Poly1305"
repository = "https://github.com/Voornaamenachternaam/filecryption"
homepage = "https://github.com/Voornaamenachternaam/filecryption"
license-file = "LICENSE.txt"
keywords = ["encryption", "decryption", "XChaCha20Poly1305"]
categories = ["cryptography"]
publish = false

[dependencies]
orion = { version = "^0.17.12", features = ["default"] }
argon2 = { version = "^0.5.3", default-features = false, features = ["std"] }
base64 = "^0.22.1"
rpassword = "^7.4.0"
clap = { version = "^4.5.56", features = ["derive"] }
zeroize = { version = "^1.8.2", features = ["zeroize_derive"] }
rand = "^0.9.2"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[dev-dependencies]
tempfile = "^3.24.0"
